Added favicon and new links/icons

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     referrerpolicy="no-referrer"
   />
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="icon/aicon.png">
+
   <!-- Main CSS (Minimal – JS Driven UI) -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
