--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Muhammad Yasir | All Social Links in One Place" />
-  <meta name="author" content="Muhammad Yasir" />
-
+    <!-- Primary Meta Tags -->
+  <meta name="description" content="Muhammad Yasir - All Social Media & Professional Links in One Place. Connect with me on GitHub, LinkedIn, Twitter, Medium and more.">
+  <meta name="keywords" content="Muhammad Yasir, Social Links, Link-in-Bio, Developer Links, Portfolio Links, GitHub, LinkedIn, Twitter, Instagram, Social Media Hub">
+  <meta name="author" content="Muhammad Yasir">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
   <title>Muhammad Yasir | Link Page</title>
 
   <!-- Font Awesome (Icons) -->
@@ -17,7 +18,7 @@
   />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="icon/aicon.png">
+  <link rel="icon" type="image/png" href="icon/icon.jpeg">
 
   <!-- Main CSS (Minimal – JS Driven UI) -->
   <link rel="stylesheet" href="assets/css/style.css" />
